exported ipynb notebooks to python

--- a/tests/ducts_minimal.ipynb
+++ b/tests/ducts_minimal.ipynb
@@ -77,7 +77,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": null
     },
     {
      "cell_type": "code",
